classDiagram
direction RL

%%title: Channels meta
%%note: used for tune channels and layers volume and pan, tune fx's params.
%% not used for add|delete layers, fxs and instruments

class Channels {
  *List<Channel> channels
}

class Channel {
  *string key
  *string name
  *boolean isMutable
  *boolean isSoloable
  *boolean isFXable
  List<FX> fxs
  *boolean isTunable
  List<Tune> tunes
  List<Instrumen> instruments
  List<Layer> layers
}

Channel --o Channels : "1..*" channels

class Instrument {
  string name
}

Instrument --o Channel : "1..*" instruments

class Layer {
  *string key
  *string name
  *boolean isFXable %% can manipulate (add|delete) of fx's chain
  List<FX> fxs
}

Layer --o Channel : "0..*" layers 

class FX {
  *string key
  *string name
  List<FXparam> params
}

FX --o Channel : "0..*" fxs
FX --o Layer : "0..*" fxs

class FXparam {
  *string key
  *string name
  *FXParamTypes type
  double min
  double max
  *int divisions
  List<double> discrete_vals
}

FXparam --o FX : "1..*" params

class FXParamType {
<<Enumeration>>
  range
  fixed
  boolean
}

FXParamType -- FXparam : type

class FXParamDiscreteVal {
  string name
  *double val
}

FXParamDiscreteVal --o FXparam : "0..*" discrete_vals